--- a/Alba.CsCss/Alba.CsCss.csproj
+++ b/Alba.CsCss/Alba.CsCss.csproj
@@ -108,6 +108,12 @@
     <Compile Include="Style\nsCSSSelectorList.cs" />
     <Compile Include="Style\nsCSSStyleSheet.cs" />
     <Compile Include="Style\nsPseudoClassList.cs" />
+    <Compile Include="Style\Original\LookAndFeel.conv.cs">
+      <DependentUpon>LookAndFeel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Style\Original\nsCSSProps.conv.cs">
+      <DependentUpon>nsCSSProps.tt</DependentUpon>
+    </Compile>
     <Compile Include="Style\Original\nsCSSProps.CSSFontDescList.g.cs">
       <DependentUpon>nsCSSFontDescList.tt</DependentUpon>
     </Compile>
@@ -117,8 +123,8 @@
     <Compile Include="Style\Original\nsCSSProps.CSSPropList.g.cs">
       <DependentUpon>nsCSSPropList.tt</DependentUpon>
     </Compile>
-    <Compile Include="Style\Original\nsCSSProps.g.cs">
-      <DependentUpon>nsCSSProps.tt</DependentUpon>
+    <Compile Include="Style\Original\nsStyle.nsIWidget.conv.cs">
+      <DependentUpon>nsIWidget.tt</DependentUpon>
     </Compile>
     <Compile Include="Style\Original\nsStyleStructID.g.cs">
       <DependentUpon>nsStyleStructList.tt</DependentUpon>
@@ -239,6 +245,18 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>nsMediaFeaturesH.h</DependentUpon>
+    </None>
+    <None Include="Style\Original\LookAndFeel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>LookAndFeel.h</DependentUpon>
+    </None>
+    <None Include="Style\Original\nsIWidget.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>nsIWidget.h</DependentUpon>
     </None>
     <None Include="Style\Original\nsStyleStructList.ttinclude" />
     <None Include="Style\Original\nsCSSFontDescList.tt">
@@ -440,6 +458,18 @@
     <None Include="Style\Original\nsStyleStructList.h">
       <Generator>AttachT4</Generator>
       <LastGenOutput>nsStyleStructList.tt</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Style\Original\LookAndFeel.h">
+      <Generator>AttachT4</Generator>
+      <LastGenOutput>LookAndFeel.tt</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Style\Original\nsIWidget.h">
+      <Generator>AttachT4</Generator>
+      <LastGenOutput>nsIWidget.tt</LastGenOutput>
     </None>
   </ItemGroup>
   <Import Project="$(SolutionDir)\Build\Common.targets" Condition="Exists('$(SolutionDir)\Build\Common.targets')" />
