--- a/Alba.CsCss/Alba.CsCss.csproj
+++ b/Alba.CsCss/Alba.CsCss.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Style\CssLoader.cs" />
     <Compile Include="Style\Calc\CSSValueInputCalcOps.cs" />
     <Compile Include="Common\nsCompatibility.cs" />
+    <Compile Include="Style\CssPropertyValue.cs" />
     <Compile Include="Style\Declaration.cs" />
     <Compile Include="Style\Media\nsMediaExpression.cs" />
     <Compile Include="Style\Media\nsMediaFeature.cs" />
@@ -205,7 +206,6 @@
     <Compile Include="Style\Rules\MediaRule.cs" />
     <Compile Include="Style\Rules\NameSpaceRule.cs" />
     <Compile Include="Style\Rules\nsCSSFontFaceRule.cs" />
-    <Compile Include="Style\Rules\nsCSSFontFaceStyleDecl.cs" />
     <Compile Include="Style\Rules\nsCSSKeyframeRule.cs" />
     <Compile Include="Style\Rules\nsCSSKeyframesRule.cs" />
     <Compile Include="Style\Rules\nsCSSPageRule.cs" />
