Added Twitter bootstrap parsing test, fixed exceptions due to nsCSSValue passed as value and incorrect linked list construction

--- a/Alba.CsCss.Tests/Alba.CsCss.Tests.csproj
+++ b/Alba.CsCss.Tests/Alba.CsCss.Tests.csproj
@@ -64,6 +64,12 @@
       <Name>Alba.Framework</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Files\bootstrap-responsive.css" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Files\bootstrap.css" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
