--- a/Alba.CsCss/Alba.CsCss.csproj
+++ b/Alba.CsCss/Alba.CsCss.csproj
@@ -101,7 +101,7 @@
     <Compile Include="Style\nsCSSExpandedDataBlock.cs" />
     <Compile Include="Style\nsCSSKeywords.cs" />
     <Compile Include="Style\nsCSSParser.cs" />
-    <Compile Include="Style\nsCSSPropertySet.cs" />
+    <Compile Include="Style\CssPropertySet.cs" />
     <Compile Include="Style\nsCSSProps.cs" />
     <Compile Include="Style\nsCSSPseudoClasses.cs" />
     <Compile Include="Style\nsCSSPseudoElements.cs" />
@@ -109,6 +109,9 @@
     <Compile Include="Style\nsCSSSelectorList.cs" />
     <Compile Include="Style\nsCSSStyleSheet.cs" />
     <Compile Include="Style\nsPseudoClassList.cs" />
+    <Compile Include="Style\Original\CssProperty.g.cs">
+      <DependentUpon>nsCSSPropList.tt</DependentUpon>
+    </Compile>
     <Compile Include="Style\Original\LookAndFeel.conv.cs">
       <DependentUpon>LookAndFeel.tt</DependentUpon>
     </Compile>
@@ -162,9 +165,6 @@
     </Compile>
     <Compile Include="Style\Original\nsCSSParser.conv.cs">
       <DependentUpon>nsCSSParser.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Style\Original\nsCSSProperty.g.cs">
-      <DependentUpon>nsCSSPropList.tt</DependentUpon>
     </Compile>
     <Compile Include="Style\Original\nsCSSPropH.conv.cs">
       <DependentUpon>nsCSSPropsH.tt</DependentUpon>
