--- a/Alba.CsCss/Alba.CsCss.csproj
+++ b/Alba.CsCss/Alba.CsCss.csproj
@@ -76,7 +76,7 @@
     <Compile Include="Style\Calc\ICalcOpsInput.cs" />
     <Compile Include="Style\CssLoader.cs" />
     <Compile Include="Style\Calc\CSSValueInputCalcOps.cs" />
-    <Compile Include="Common\nsCompatibility.cs" />
+    <Compile Include="Common\BrowserCompatibility.cs" />
     <Compile Include="Style\CssPropertyValue.cs" />
     <Compile Include="Style\CssDeclaration.cs" />
     <Compile Include="Style\Media\nsMediaExpression.cs" />
@@ -111,6 +111,9 @@
     <Compile Include="Style\nsPseudoClassList.cs" />
     <Compile Include="Style\Original\CssProperty.g.cs">
       <DependentUpon>nsCSSPropList.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Style\Original\CssPseudoClass.g.cs">
+      <DependentUpon>nsCSSPseudoClassList.tt</DependentUpon>
     </Compile>
     <Compile Include="Style\Original\LookAndFeel.conv.cs">
       <DependentUpon>LookAndFeel.tt</DependentUpon>
@@ -168,9 +171,6 @@
     </Compile>
     <Compile Include="Style\Original\nsCSSPropH.conv.cs">
       <DependentUpon>nsCSSPropsH.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Style\Original\nsCSSPseudoClass.g.cs">
-      <DependentUpon>nsCSSPseudoClassList.tt</DependentUpon>
     </Compile>
     <Compile Include="Style\Original\nsCSSPseudoClasses.g.cs">
       <DependentUpon>nsCSSPseudoClassList.tt</DependentUpon>
